<resources>
    <string name="app_name">Bottom Navigation Demo App</string>
    <string name="title_wildCats">WildCats</string>
    <string name="title_reptiles">Reptiles</string>
    <string name="title_home">Home</string>
    <string name="title_bull">Bulls</string>
    <string name="title_birds">Birds</string>
   <string name="textWildCat">The wildcat is a species complex comprising two small wild cat
       species, the European wildcat (Felis silvestris) and the African wildcat (F. lybica).
       The European wildcat inhabits forests in Europe and the Caucasus, while the African wildcat
       inhabits semi-arid landscapes and steppes in Africa, the Arabian Peninsula, Central Asia,
       into western India and western China.[2] The wildcat species differ in fur pattern, tail,
       and size: the European wildcat has long fur and a bushy tail with a rounded tip; the smaller
       African wildcat is more faintly striped, has short sandy-gray fur and a tapering tail;
       the Asiatic wildcat (F. lybica ornata) is spotted.</string>

    <string name="textBulls">A bull is an intact (i.e., not castrated) adult male of the species Bos taurus.
        More muscular and aggressive than the female of the species, the cow, the bull has long been an important symbol
        in many cultures, and plays a significant role in beef ranching, dairy farming, and a variety of
        other cultural activities, including bull fighting and bull riding.</string>

    <string name="textBirds">Birds are a group of warm-blooded vertebrates constituting the class Aves,
        characterized by feathers, toothless beaked jaws, the laying of hard-shelled eggs, a high metabolic rate,
        a four-chambered heart, and a strong yet lightweight skeleton. Birds live worldwide and range in size from the
        5 cm (2 in) bee hummingbird to the 2.75 m (9 ft) ostrich. There are about ten thousand living species,
        more than half of which are passerine, or "perching" birds. Birds have wings whose development varies
        according to species; the only known groups without wings are the extinct moa and elephant birds. Wings,
        which evolved from forelimbs, gave birds the ability to fly, although further evolution has
        led to the loss of flight in some birds, including ratites, penguins, and diverse endemic island species.</string>

    <string name="textReptiles">Reptiles are tetrapod animals in the class Reptilia, comprising today\'s turtles,
        crocodilians, snakes, amphisbaenians, lizards, tuatara, and their extinct relatives. The study of these
        traditional reptile orders, historically combined with that of modern amphibians, is called herpetology.
        Because some reptiles are more closely related to birds than they are to other reptiles (e.g., crocodiles
        are more closely related to birds than they are to lizards), the traditional groups of "reptiles" listed above
        do not together constitute a monophyletic grouping or clade (consisting of all descendants of a common ancestor).
        For this reason, many modern scientists prefer to consider the birds part of Reptilia as well, thereby making
        Reptilia a monophyletic class, including all living diapsids.</string>

    <string name="textHome">Welcome To The world Of Animals .Lets Explore some information of various animals</string>
</resources>