<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_wildCats"
        android:name="com.arpit.bottomnavigationdemoapp.ui.UI.wildcats.WildCatFragment"
        android:label="@string/title_wildCats"
        tools:layout="@layout/fragment_wild_cat" />

    <fragment
        android:id="@+id/navigation_reptile"
        android:name="com.arpit.bottomnavigationdemoapp.ui.UI.reptiles.ReptilesFragment"
        android:label="@string/title_reptiles"
        tools:layout="@layout/fragment_reptiles" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.arpit.bottomnavigationdemoapp.ui.UI.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bull"
        android:name="com.arpit.bottomnavigationdemoapp.ui.UI.bulls.BullsFragment"
        android:label="@string/title_bull"
        tools:layout="@layout/fragment_bulls" />

    <fragment
        android:id="@+id/navigation_bird"
        android:name="com.arpit.bottomnavigationdemoapp.ui.UI.birds.BirdsFragment"
        android:label="@string/title_birds"
        tools:layout="@layout/fragment_birds" />
</navigation>